Fix: Update contact form button style to fix contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,6 +536,12 @@ footer a:hover {
 
 #submit-btn-container input[type="submit"] {
     text-align: center;
+    color: var(--white);
+}
+
+#submit-btn-container input[type="submit"]:hover {
+    color: var(--red);
+    transition: 0.5s all;
 }
 
 #errors {
